--- a/client/src/App.css
+++ b/client/src/App.css
@@ -22,6 +22,23 @@
   font-size: large;
 }
 
+.button {
+  padding: 6px 24px;
+  color: white;
+  font-weight: bold;
+  background-color: orange;
+  width: 100%;
+  text-align: center;
+  border: none;
+  display: block;
+  
+}
+
+.button:hover {
+  background-color: rgb(189, 124, 3);
+  cursor: pointer;
+}
+
 @keyframes App-logo-spin {
   from { transform: rotate(0deg); }
   to { transform: rotate(360deg); }
