--- a/client/src/App.css
+++ b/client/src/App.css
@@ -22,6 +22,7 @@
   font-size: large;
 }
 
+
 .button {
   padding: 6px 24px;
   color: white;
@@ -38,6 +39,15 @@
   background-color: rgb(189, 124, 3);
   cursor: pointer;
 }
+
+.main-page {
+  height: 100vh;
+}
+
+.map-height {
+  height: 50vh;
+}
+
 
 @keyframes App-logo-spin {
   from { transform: rotate(0deg); }
