--- a/client/src/App.css
+++ b/client/src/App.css
@@ -22,8 +22,12 @@
   font-size: large;
 }
 
+.header-font {
+  font-family: Arial, Helvetica, sans-serif;
+}
+
 .map-height {
-  max-height: 89vh;
+  max-height: 82vh;
 }
 
 .button {
