--- a/client/src/App.css
+++ b/client/src/App.css
@@ -9,6 +9,7 @@
   border-top: 1px solid white;
   border-radius: 10%;
   cursor: pointer;
+  background: rgba(255, 255, 255, 0.3);
 }
 
 
@@ -37,7 +38,8 @@
 }
 
 .header-font {
-  font-family: Arial, Helvetica, sans-serif;
+  /* font-family: Arial, Helvetica, sans-serif; */
+  font-family: 'Quicksand', sans-serif;
 }
 
 .map-height {
@@ -46,6 +48,14 @@
 
 .transparent-bg {
   background: transparent;
+}
+
+button.transparent-bg:hover {
+  background: rgba(255, 255, 255, 0.3);
+}
+
+body {
+  font-family: 'Quicksand', sans-serif;
 }
 
 .button {
@@ -77,7 +87,7 @@
 }
 
 .login-header {
-  background-color: rgba(255, 165, 0, 0.5);
+  background-color: rgba(255, 165, 0, 0.7);
   color: white;
 }
 
