--- a/client/src/Pages/Communities/Communities.css
+++ b/client/src/Pages/Communities/Communities.css
@@ -15,7 +15,7 @@
     font-weight: bold;
 }
 .user-comment {
-    white-space: pre-line;
+    border-bottom: 2px dotted #293E68;
 }
 
 @media (max-width: 900px) {
