--- a/client/src/App.css
+++ b/client/src/App.css
@@ -133,12 +133,7 @@ body {
   -webkit-box-shadow: none;
 }
 
-input[type=text]:focus {
-  background: transparent;
-  color: white;
-}
-
-input[type=password]:focus {
+input[type=text]:focus, input[type=email]:focus, input[type=password]:focus {
   background: transparent;
   color: white;
 }
